message for not responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
     <!-- nav Bar -->
-
+     <h1 class="mobile">Responsive need to be added, kindly visit on Desktop</h1>
+    <div class="Wholecontainer">
     <header id="header">
         <nav class="navbar navbar-expand-lg" id="navbar">
             <div class="container">
@@ -394,7 +395,7 @@
 
             <!-- <h2><button class="qu1">What is topic Listing</button> <span>&#129171;</span></h2> -->
         </div>
-
+    </div>
         <script>
             document.addEventListener('scroll', () => {
                 const header = document.querySelector('header')
